# uv_pro

./: .gitignore  LICENSE  README.md  pickled_root  pyproject.toml
docs/: binarymixture.rst  cli.rst  conf.py  config.rst  dataset.rst  export.rst  file_io.rst  file_picker.rst  filepaths.rst  filepicker.rst  fitting.rst  import_csv.rst  import_kd.rst  index.rst  installation.rst  modules.rst  multiview.rst  outliers.rst  peak_finding.rst  peakfinder.rst  peaks.rst  plots.rst  process.rst  quickfig.rst  quickstart.rst  slicing.rst
test data/: multi_cuvette_test_data.KD  multi_cuvette_test_data_corrupted.KD  test_data.KD  test_data2.KD  test_data3.KD
tests/: test_import_kd.py
uv_pro/: __init__.py  __main__.py  _args.py  binarymix.py  binarymixture.py  cli.py  const.py  dataset.py  file_io.py  file_picker.py  fitting.py  k2.py  multiview.py  outliers.py  peakfinder.py  peaks.py  plots.py  process.py  quickfig.py  root_directory.pickle  slicing.py
uv_pro/commands/: __init__.py  _command.py  _parsers.py  _registry.py  batch.py  binmix.py  browse.py  config.py  k2.py  multiview.py  peaks.py  process.py  test.py  tree.py
uv_pro/io/: export.py  import_csv.py  import_kd.py
uv_pro/plots/: __init__.py  binmix_plot.py  dataset_plots.py  peaks_plot.py
uv_pro/scripts/: cli.py  go_to_rootdir.py  multiview.py
uv_pro/utils/: _config_validator.py  _defaults.py  _rich.py  _validate.py  config.py  filepicker.py  helpers.py  k2_plot.py  paths.py  printing.py  prompts.py  quickfig.py
