[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uv_pro"
version = "0.7.1"
authors = [
  { name="David Hebert", email="david@ddhebert.com" },
]
description = "Tools for processing Agilent 845x Chemstation UV-Vis data files."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Framework :: Matplotlib",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Utilities",
]
keywords = [
  'uv-vis',
  'uvvis',
  'spectroscopy',
  'Agilent',
  '845x',
  'binary',
  '.KD',
  '.kd',
  '.CSV',
  '.csv',
  'tool',
  'processing',
  'outliers',
  'baseline',
  'import',
  'export'
]
dependencies = [
  "numpy>=1.21.6",
  "pandas>=1.5.2",
  "pybaselines>=1.0.0",
  "matplotlib>=3.6.2",
  "scipy>=1.12.0",
  "rich>=13.7.1",
  "questionary>=2.0.1"
]

[project.scripts]
uvp = "uv_pro.cli:main"

[project.urls]
"repository" = "https://github.com/dd-hebert/uv_pro"
"bug tracker" = "https://github.com/dd-hebert/uv_pro/issues"